--- a/menu_send_message.html
+++ b/menu_send_message.html
@@ -17,7 +17,7 @@
 
     <div class="btns">
         <button class="btn_back">
-            <a href="index.html" class="btnback">Вернуться в главную меню</a>
+            <a id="Btn" href="index.html" class="btnback">Вернуться в главную меню</a>
         </button>
     </div>
 
@@ -29,7 +29,7 @@
                 <input class ="mail" type="email" name="email" placeholder="Ваша электронная почта" required>
                 <div class="titles">Cообщение</div>
                 <textarea class="message" type="text" name="message" placeholder="Ваше сообщение (максимум 1000 символов)" required></textarea>
-                <button type="sumbit" name="send" class="btn">Отправить</button>
+                <button id="Btn" type="sumbit" name="send" class="btn">Отправить</button>
             </pre>
         </form>
     </div>
